--- a/calculator.html
+++ b/calculator.html
@@ -11,12 +11,19 @@
         function seno(){
           var num = document.getElementById("n1");
           num.value = Math.sin(num.value);
+        }
 
         function cuarta(){
           var num = document.getElementById("n1");
           num.value = Math.pow(num.value, 4);
 
         }
+
+        function cuadrado(){
+          var num = document.getElementById("n1");
+          num.value = Math.pow(num.value, 2);
+        }
+
     </script>
   </head>
   <body>
@@ -24,6 +31,8 @@
     Number:
     <input type="text" id="n1">
     <p>
+      <button onclick="cuadrado()">x^2</button>
+      
       <button onclick="cube()">x^3</button>
 
       <button onclick="seno()">sin(x)</button>
