--- a/calculator.html
+++ b/calculator.html
@@ -24,6 +24,11 @@
           num.value = Math.pow(num.value, 2);
         }
 
+        function inverso(){
+          var num = document.getElementById("n1");
+          num.value = 1/num.value;
+        }
+
     </script>
   </head>
   <body>
@@ -32,13 +37,14 @@
     <input type="text" id="n1">
     <p>
       <button onclick="cuadrado()">x^2</button>
-      
+
       <button onclick="cube()">x^3</button>
 
       <button onclick="seno()">sin(x)</button>
 
       <button onclick="cuarta()">x^4</button>
 
+      <button onclick="inverso()">1/x</button>
     </p>
   </body>
 </html>
